--- a/src/main/asciidoc/reference/mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/mongo-repositories.adoc
@@ -1,15 +1,15 @@
 [[mongo.repositories]]
-= MongoDB repositories
+= MongoDB Repositories
 
 [[mongo-repo-intro]]
 == Introduction
 
-This chapter will point out the specialties for repository support for MongoDB. This builds on the core repository support explained in <<repositories>>. So make sure you've got a sound understanding of the basic concepts explained there.
+This chapter points out the specialties for repository support for MongoDB. This chapter builds on the core repository support explained in <<repositories>>. You should have a sound understanding of the basic concepts explained there.
 
 [[mongo-repo-usage]]
 == Usage
 
-To access domain entities stored in a MongoDB you can leverage our sophisticated repository support that eases implementing those quite significantly. To do so, simply create an interface for your repository:
+To access domain entities stored in a MongoDBm, you can use our sophisticated repository support that eases implementation quite significantly. To do so, create an interface for your repository, as the following example shows:
 
 .Sample Person entity
 ====
@@ -28,7 +28,7 @@ public class Person {
 ----
 ====
 
-We have a quite simple domain object here. Note that it has a property named `id` of type `ObjectId`. The default serialization mechanism used in `MongoTemplate` (which is backing the repository support) regards properties named id as document id. Currently we support `String`, `ObjectId` and `BigInteger` as id-types.
+Note that the domain type shown in the preceding example has a property named `id` of type `ObjectId`. The default serialization mechanism used in `MongoTemplate` (which backs the repository support) regards properties named `id` as the document ID. Currently, we support `String`, `ObjectId`, and `BigInteger` as ID types. Now that we have a domain object, we can define an interface that uses it, as follows:
 
 .Basic repository interface to persist Person entities
 ====
@@ -41,7 +41,7 @@ public interface PersonRepository extends PagingAndSortingRepository<Person, Lon
 ----
 ====
 
-Right now this interface simply serves typing purposes but we will add additional methods to it later. In your Spring configuration simply add
+Right now this interface serves only to provide type information, but we can add additional methods to it later. To do so, in your Spring configuration, add the following content:
 
 .General MongoDB repository Spring configuration
 ====
@@ -69,11 +69,11 @@ Right now this interface simply serves typing purposes but we will add additiona
 ----
 ====
 
-This namespace element will cause the base packages to be scanned for interfaces extending `MongoRepository` and create Spring beans for each of them found. By default the repositories will get a `MongoTemplate` Spring bean wired that is called `mongoTemplate`, so you only need to configure `mongo-template-ref` explicitly if you deviate from this convention.
+This namespace element causes the base packages to be scanned for interfaces that extend `MongoRepository` and create Spring beans for each one found. By default, the repositories get a `MongoTemplate` Spring bean wired that is called `mongoTemplate`, so you only need to configure `mongo-template-ref` explicitly if you deviate from this convention.
 
-If you'd rather like to go with JavaConfig use the `@EnableMongoRepositories` annotation. The annotation carries the very same attributes like the namespace element. If no base package is configured the infrastructure will scan the package of the annotated configuration class.
+If you would rather go with Java-based configuration, use the `@EnableMongoRepositories` annotation. That annotation carries the same attributes as the namespace element. If no base package is configured, the infrastructure scans the package of the annotated configuration class. The following example shows how to use Java configuration for a repository:
 
-.JavaConfig for repositories
+.Java configuration for repositories
 ====
 [source,java]
 ----
@@ -99,7 +99,7 @@ class ApplicationConfig extends AbstractMongoConfiguration {
 ----
 ====
 
-As our domain repository extends `PagingAndSortingRepository` it provides you with CRUD operations as well as methods for paginated and sorted access to the entities. Working with the repository instance is just a matter of dependency injecting it into a client. So accessing the second page of `Person` s at a page size of 10 would simply look something like this:
+Because our domain repository extends `PagingAndSortingRepository`, it provides you with CRUD operations as well as methods for paginated and sorted access to the entities. Working with the repository instance is just a matter of dependency injecting it into a client. Consequently, accessing the second page of `Person` objects at a page size of 10 would resemble the following code:
 
 .Paging access to Person entities
 ====
@@ -121,12 +121,12 @@ public class PersonRepositoryTests {
 ----
 ====
 
-The sample creates an application context with Spring's unit test support which will perform annotation based dependency injection into test cases. Inside the test method we simply use the repository to query the datastore. We hand the repository a `PageRequest` instance that requests the first page of persons at a page size of 10.
+The preceding example creates an application context with Spring's unit test support, which performs annotation-based dependency injection into test cases. Inside the test method, we use the repository to query the datastore. We hand the repository a `PageRequest` instance that requests the first page of `Person` objects at a page size of 10.
 
 [[mongodb.repositories.queries]]
-== Query methods
+== Query Methods
 
-Most of the data access operations you usually trigger on a repository result a query being executed against the MongoDB databases. Defining such a query is just a matter of declaring a method on the repository interface
+Most of the data access operations you usually trigger on a repository result in a query being executed against the MongoDB databases. Defining such a query is a matter of declaring a method on the repository interface, as the following example shows:
 
 .PersonRepository with query methods
 ====
@@ -145,14 +145,16 @@ public interface PersonRepository extends PagingAndSortingRepository<Person, Str
     Stream<Person> findAllBy();                                        <5>
 }
 ----
-<1> The method shows a query for all people with the given lastname. The query will be derived parsing the method name for constraints which can be concatenated with `And` and `Or`. Thus the method name will result in a query expression of `{"lastname" : lastname}`.
-<2> Applies pagination to a query. Just equip your method signature with a `Pageable` parameter and let the method return a `Page` instance and we will automatically page the query accordingly.
-<3> Shows that you can query based on properties which are not a primitive type. Throws `IncorrectResultSizeDataAccessException` if more than one match found.
-<4> Uses the `First` keyword to restrict the query to the very first result. Unlike <3> this method does not throw an exception if more than one match was found.
-<5> Uses a Java 8 `Stream` which reads and converts individual elements while iterating the stream.
+<1> The `findByLastname` method shows a query for all people with the given last name. The query is derived by parsing the method name for constraints that can be concatenated with `And` and `Or`. Thus, the method name results in a query expression of `{"lastname" : lastname}`.
+<2> Applies pagination to a query. You can equip your method signature with a `Pageable` parameter and let the method return a `Page` instance and Spring Data automatically pages the query accordingly.
+<3> Shows that you can query based on properties that are not primitive types. Throws `IncorrectResultSizeDataAccessException` if more than one match is found.
+<4> Uses the `First` keyword to restrict the query to only the first result. Unlike <3>, this method does not throw an exception if more than one match is found.
+<5> Uses a Java 8 `Stream` that reads and converts individual elements while iterating the stream.
 ====
 
-NOTE: Note that for version 1.0 we currently don't support referring to parameters that are mapped as `DBRef` in the domain class.
+NOTE: For version 1.0, we currently do not support referring to parameters that are mapped as `DBRef` in the domain class.
+
+The following table shows the keywords that are supported for query methods:
 
 [cols="1,2,3", options="header"]
 .Supported keywords for query methods
@@ -277,9 +279,9 @@ NOTE: Note that for version 1.0 we currently don't support referring to paramete
 NOTE: If the property criterion compares a document, the order of the fields and exact equality in the document matters.
 
 [[mongodb.repositories.queries.delete]]
-=== Repository delete queries
+=== Repository Delete Queries
 
-The above keywords can be used in conjunction with `delete…By` or `remove…By` to create queries deleting matching documents.
+The keywords in the preceding table can be used in conjunction with `delete…By` or `remove…By` to create queries that delete matching documents.
 
 .`Delete…By` Query
 ====
@@ -294,12 +296,14 @@ public interface PersonRepository extends MongoRepository<Person, String> {
 ----
 ====
 
-Using return type `List` will retrieve and return all matching documents before actually deleting them. A numeric return type directly removes the matching documents returning the total number of documents removed.
+Using a return type of `List` retrieves and returns all matching documents before actually deleting them. A numeric return type directly removes the matching documents, returning the total number of documents removed.
 
 [[mongodb.repositories.queries.geo-spatial]]
-=== Geo-spatial repository queries
+=== Geo-spatial Repository Queries
 
-As you've just seen there are a few keywords triggering geo-spatial operations within a MongoDB query. The `Near` keyword allows some further modification. Let's have a look at some examples:
+As you saw in the preceding table of keywords, a few keywords trigger geo-spatial operations within a MongoDB query. The `Near` keyword allows some further modification, as the next few examples show.
+
+The following example shows how to define a `near` query that finds all persons with a given distance of a given point:
 
 .Advanced `Near` queries
 ====
@@ -313,7 +317,7 @@ public interface PersonRepository extends MongoRepository<Person, String>
 ----
 ====
 
-Adding a `Distance` parameter to the query method allows restricting results to those within the given distance. If the `Distance` was set up containing a `Metric` we will transparently use `$nearSphere` instead of $code.
+Adding a `Distance` parameter to the query method allows restricting results to those within the given distance. If the `Distance` was set up containing a `Metric`, we transparently use `$nearSphere` instead of $code, as the following example shows:
 
 .Using `Distance` with `Metrics`
 ====
@@ -326,11 +330,15 @@ Distance distance = new Distance(200, Metrics.KILOMETERS);
 ----
 ====
 
-As you can see using a `Distance` equipped with a `Metric` causes `$nearSphere` clause to be added instead of a plain `$near`. Beyond that the actual distance gets calculated according to the `Metrics` used.
+Using a `Distance` with a `Metric` causes a `$nearSphere` (instead of a plain `$near`) clause to be added. Beyond that, the actual distance gets calculated according to the `Metrics` used.
 
-NOTE: Using `@GeoSpatialIndexed(type = GeoSpatialIndexType.GEO_2DSPHERE)` on the target property forces usage of `$nearSphere` operator.
+(Note that `Metric` does not refer to metric units of measure. It could be miles rather than kilometers. Rather, `metric` refers to the concept of a system of measurement, regardless of which system you use.)
 
-==== Geo-near queries
+NOTE: Using `@GeoSpatialIndexed(type = GeoSpatialIndexType.GEO_2DSPHERE)` on the target property forces usage of the `$nearSphere` operator.
+
+==== Geo-near Queries
+
+Spring Data MongoDb supports geo-near queries, as the following example shows:
 
 [source,java]
 ----
@@ -355,9 +363,9 @@ public interface PersonRepository extends MongoRepository<Person, String>
 ----
 
 [[mongodb.repositories.queries.json-based]]
-=== MongoDB JSON based query methods and field restriction
+=== MongoDB JSON-based Query Methods and Field Restriction
 
-By adding the annotation `org.springframework.data.mongodb.repository.Query` repository finder methods you can specify a MongoDB JSON query string to use instead of having the query derived from the method name. For example
+By adding the `org.springframework.data.mongodb.repository.Query` annotation to your repository finder methods, you can specify a MongoDB JSON query string to use instead of having the query be derived from the method name, as the following example shows:
 
 [source,java]
 ----
@@ -369,11 +377,11 @@ public interface PersonRepository extends MongoRepository<Person, String>
 }
 ----
 
-The placeholder `?0` lets you substitute the value from the method arguments into the JSON query string.
+The `?0` placeholder lets you substitute the value from the method arguments into the JSON query string.
 
-NOTE: `String` parameter values are escaped during the binding process, which means that it is not possible to add MongoDB specific operators via the argument.
+NOTE: `String` parameter values are escaped during the binding process, which means that it is not possible to add MongoDB specific operators through the argument.
 
-You can also use the filter property to restrict the set of properties that will be mapped into the Java object. For example,
+You can also use the filter property to restrict the set of properties that is mapped into the Java object, as the following example shows:
 
 [source,java]
 ----
@@ -385,16 +393,16 @@ public interface PersonRepository extends MongoRepository<Person, String>
 }
 ----
 
-This will return only the firstname, lastname and Id properties of the Person objects. The age property, a java.lang.Integer, will not be set and its value will therefore be null.
+The query in the preceding example returns only the `firstname`, `lastname` and `Id` properties of the `Person` objects. The `age` property, a java.lang.Integer, is not set and its value is therefore null.
 
 [[mongodb.repositories.queries.json-spel]]
-=== JSON based queries with SpEL expressions
+=== JSON-based Queries with SpEL Expressions
 
 Query strings and field definitions can be used together with SpEL expressions to create dynamic queries at runtime.
 SpEL expressions can provide predicate values and can be used to extend predicates with subdocuments.
 
-Expressions expose method arguments through an array that contains all arguments. The the following query uses `[0]`
-to declare the predicate value for `lastname` that is equivalent to the `?0` parameter binding.
+Expressions expose method arguments through an array that contains all the arguments. The following query uses `[0]`
+to declare the predicate value for `lastname` (which is equivalent to the `?0` parameter binding):
 
 [source,java]
 ----
@@ -405,8 +413,8 @@ public interface PersonRepository extends MongoRepository<Person, String>
 }
 ----
 
-Expressions can be used to invoke functions, evaluate conditionals and construct values. SpEL expressions
-reveal in conjunction with JSON a side-effect as Map-like declarations inside of SpEL read like JSON.
+Expressions can be used to invoke functions, evaluate conditionals, and construct values. SpEL expressions
+used in conjunction with JSON reveal a side-effect, because Map-like declarations inside of SpEL read like JSON, as the following example shows:
 
 [source,java]
 ----
@@ -417,12 +425,12 @@ public interface PersonRepository extends MongoRepository<Person, String>
 }
 ----
 
-SpEL in query strings can be a powerful way to enhance queries and can accept a broad range of unwanted arguments.
-You should make sure to sanitize strings before passing these to the query to avoid unwanted changes to your query.
+SpEL in query strings can be a powerful way to enhance queries. However, they can also accept a broad range of unwanted arguments.
+You should make sure to sanitize strings before passing them to the query to avoid unwanted changes to your query.
 
-Expression support is extensible through the Query SPI `org.springframework.data.repository.query.spi.EvaluationContextExtension`
-than can contribute properties, functions and customize the root object. Extensions are retrieved from the application context
-at the time of SpEL evaluation when the query is build.
+Expression support is extensible through the Query SPI: `org.springframework.data.repository.query.spi.EvaluationContextExtension`.
+The Query SPI can contribute properties and functions and can customize the root object. Extensions are retrieved from the application context
+at the time of SpEL evaluation when the query is built. The following example shows how to use `EvaluationContextExtension`:
 
 [source,java]
 ----
@@ -444,19 +452,19 @@ NOTE: Bootstrapping `MongoRepositoryFactory` yourself is not application context
 to pick up Query SPI extensions.
 
 [[mongodb.repositories.queries.type-safe]]
-=== Type-safe Query methods
+=== Type-safe Query Methods
 
-MongoDB repository support integrates with the http://www.querydsl.com/[QueryDSL] project which provides a means to perform type-safe queries in Java. To quote from the project description, "Instead of writing queries as inline strings or externalizing them into XML files they are constructed via a fluent API." It provides the following features
+MongoDB repository support integrates with the http://www.querydsl.com/[QueryDSL] project, which provides a way to perform type-safe queries. To quote from the project description, "Instead of writing queries as inline strings or externalizing them into XML files they are constructed via a fluent API." It provides the following features:
 
-* Code completion in IDE (all properties, methods and operations can be expanded in your favorite Java IDE)
-* Almost no syntactically invalid queries allowed (type-safe on all levels)
-* Domain types and properties can be referenced safely (no Strings involved!)
-* Adopts better to refactoring changes in domain types
-* Incremental query definition is easier
+* Code completion in the IDE (all properties, methods, and operations can be expanded in your favorite Java IDE).
+* Almost no syntactically invalid queries allowed (type-safe on all levels).
+* Domain types and properties can be referenced safely -- no strings involved!
+* Adapts better to refactoring changes in domain types.
+* Incremental query definition is easier.
 
-Please refer to the http://www.querydsl.com/static/querydsl/latest/reference/html/[QueryDSL documentation] which describes how to bootstrap your environment for APT based code generation using Maven or Ant.
+See the http://www.querydsl.com/static/querydsl/latest/reference/html/[QueryDSL documentation] for how to bootstrap your environment for APT-based code generation using Maven or Ant.
 
-Using QueryDSL you will be able to write queries as shown below
+QueryDSL lets you write queries such as the following:
 
 [source,java]
 ----
@@ -467,9 +475,9 @@ Page<Person> page = repository.findAll(person.lastname.contains("a"),
                                        PageRequest.of(0, 2, Direction.ASC, "lastname"));
 ----
 
-`QPerson` is a class that is generated (via the Java annotation post processing tool) which is a `Predicate` that allows you to write type safe queries. Notice that there are no strings in the query other than the value "C0123".
+`QPerson` is a class that is generated by the Java annotation post-processing tool. It is a `Predicate` that lets you write type-safe queries. Notice that there are no strings in the query other than the `C0123` value.
 
-You can use the generated `Predicate` class via the interface `QueryDslPredicateExecutor` which is shown below
+You can use the generated `Predicate` class by using the `QueryDslPredicateExecutor` interface, which the following listing shows:
 
 [source,java]
 ----
@@ -487,7 +495,7 @@ public interface QueryDslPredicateExecutor<T> {
 }
 ----
 
-To use this in your repository implementation, simply inherit from it in addition to other repository interfaces. This is shown below
+To use this in your repository implementation, add it to the list of repository interfaces from which your interface inherits, as the following example shows:
 
 [source,java]
 ----
@@ -497,13 +505,12 @@ public interface PersonRepository extends MongoRepository<Person, String>, Query
 }
 ----
 
-We think you will find this an extremely powerful tool for writing MongoDB queries.
-
 [[mongodb.repositories.queries.full-text]]
-=== Full-text search queries
-MongoDBs full text search feature is very store specific and therefore can rather be found on `MongoRepository` than on the more general `CrudRepository`. What we need is a document with a full-text index defined for (Please see section <<mapping-usage-indexes.text-index>> for creating).
+=== Full-text Search Queries
 
-Additional methods on `MongoRepository` take `TextCriteria` as input parameter. In addition to those explicit methods, it is also possible to add a `TextCriteria` derived repository method. The criteria will be added as an additional `AND` criteria. Once the entity contains a `@TextScore` annotated property the documents full-text score will be retrieved. Furthermore the `@TextScore` annotated property will also make it possible to sort by the documents score.
+MongoDB's full-text search feature is store-specific and, therefore, can be found on `MongoRepository` rather than on the more general `CrudRepository`. We need a document with a full-text index (see "`<<mapping-usage-indexes.text-index>>`" to learn how to create a full-text index).
+
+Additional methods on `MongoRepository` take `TextCriteria` as an input parameter. In addition to those explicit methods, it is also possible to add a `TextCriteria`-derived repository method. The criteria are added as an additional `AND` criteria. Once the entity contains a `@TextScore`-annotated property, the document's full-text score can be retrieved. Furthermore, the `@TextScore` annotated also makes it possible to sort by the document's score, as the following example shows:
 
 [source, java]
 ----
@@ -540,13 +547,10 @@ List<FullTextDocument> result = repository.findByTitleOrderByScoreDesc("mongodb"
 
 include::../{spring-data-commons-docs}/repository-projections.adoc[leveloffset=+2]
 
-[[mongodb.repositories.misc]]
-== Miscellaneous
-
 [[mongodb.repositories.misc.cdi-integration]]
-=== CDI Integration
+== CDI Integration
 
-Instances of the repository interfaces are usually created by a container, which Spring is the most natural choice when working with Spring Data. As of version 1.3.0 Spring Data MongoDB ships with a custom CDI extension that allows using the repository abstraction in CDI environments. The extension is part of the JAR so all you need to do to activate it is dropping the Spring Data MongoDB JAR into your classpath. You can now set up the infrastructure by implementing a CDI Producer for the `MongoTemplate`:
+Instances of the repository interfaces are usually created by a container, and Spring is the most natural choice when working with Spring Data. As of version 1.3.0, Spring Data MongoDB ships with a custom CDI extension that lets you use the repository abstraction in CDI environments. The extension is part of the JAR. To activate it, drop the Spring Data MongoDB JAR into your classpath. You can now set up the infrastructure by implementing a CDI Producer for the `MongoTemplate`, as the following example shows:
 
 [source,java]
 ----
@@ -562,7 +566,7 @@ class MongoTemplateProducer {
 }
 ----
 
-The Spring Data MongoDB CDI extension will pick up the `MongoTemplate` available as CDI bean and create a proxy for a Spring Data repository whenever a bean of a repository type is requested by the container. Thus obtaining an instance of a Spring Data repository is a matter of declaring an `@Inject`-ed property:
+The Spring Data MongoDB CDI extension picks up the `MongoTemplate` available as a CDI bean and creates a proxy for a Spring Data repository whenever a bean of a repository type is requested by the container. Thus, obtaining an instance of a Spring Data repository is a matter of declaring an `@Inject`-ed property, as the following example shows:
 
 [source,java]
 ----
